--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.5+5
 
 environment:
   sdk: ">=2.2.2 <3.0.0"
@@ -27,11 +27,10 @@ dependencies:
   percent_indicator: "^2.1.1"
   photo_view: ^0.5.0
   file_picker: ^1.4.1
+  image_picker: 
   image: ^2.1.4
   flutter_spinkit: "^4.0.0"
   intl: ^0.15.8
-  amazon_cognito_identity_dart: ^0.0.22
-  amazon_s3_cognito: '^0.2.0'
   path_provider: ^1.4.4
   url_launcher: 
   carousel_slider: ^1.3.0
@@ -41,6 +40,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  cached_network_image: ^2.2.0+1
   firebase_messaging: 5.0.1
 
 dev_dependencies:
